feat: career path implemented
