# backend/src/api/routes/index.ts
@@ -5,12 +5,16 @@ import authenticationRoute from './authentication-route';
 import userRoute from './user-route';
 import companyRoute from './company-route';
 import tagsRoute from './tags-route';
+import careerPathRoute from './career-path';
 
 const routes = (app: Express): void => {
   app.use('/api/auth', authenticationRoute);
   app.use('/api/user', userRoute);
   app.use('/api/company/tags', tagsRoute);
+  app.use('/api/career-path', careerPathRoute);
+
   app.use('/company', companyRoute);
+
   app.use(errorHandlerMiddleware);
 };
 
